modifique scroll horizontal y agrege nueva galeria/actividades

--- a/descubre/actividades.html
+++ b/descubre/actividades.html
@@ -196,10 +196,7 @@
             <h2>Excursiones al aire libre</h2>
             <div class="line"></div>
         </div>
-        <div>
-            <p class="contenedor__p">Como en cualquier deporte, practicando senderismo nos ponemos en forma, y al no ser un deporte de altas exigencias, se activa la circulación y es un ejercicio ideal para prevenir enfermedades cardíacas, y para disminuir la tensión arterial.</p>
-        </div>
-
+        
         <!-------seccion-banner------>
         <div class="section-actividades__excursiones-banner1 tracking-in-contract">
             <div class=banner__info>
@@ -209,32 +206,42 @@
                 <a class="btn__l" href="#">Learn More</a>
             </div>
         </div>
-
-        <div class="section-actividades__excursiones-card">
-            <!-----------card------------->
-            <div class="section-actividades__excursionescardr-item" style="width: 17rem;" data-aos="fade-down">
-                <img src="../img/senderismo2.jpg" class="card-img-top" alt="imagen de senderismo2 ">
-                <div class="card-body">
-                    <p class="card-text">El senderismo suele estar considerado como una actividad más relajante, mientras que el excursionismo se asocia con una mayor demanda física.  Además de esta diferencia, el trekking se suele combinar con otras actividades naturales, como la acampada.</p>
-                    <br>
-                    <a class="btn__l" href="#">Learn More</a>
-                </div>
+        <div>
+            <p class="contenedor__p">Como en cualquier deporte, practicando senderismo nos ponemos en forma, y al no ser un deporte de altas exigencias, se activa la circulación y es un ejercicio ideal para prevenir enfermedades cardíacas, y para disminuir la tensión arterial.</p>
+        </div>
+        <!-------seccion-gallery------>
+        <div class="section-actividades__excursiones-gallery">
+            <div class="section-actividades__gallery-item"data-aos="zoom-in">
+                <img src="../img/send5.jpg" alt="senderismo" class="section-actividades__gallery-img">
+                <h2 class="section-actividades__gallery-title"></h2>
             </div>
-            <!-----------card------------->
-            <div class="section-actividades__excursionescardr-item" style="width: 17rem;" data-aos="fade-right">
-                <img src="../img/senderismo20.jpg" class="card-img-top" alt="imagen de senderismo">
-                <div class="card-body">
-                    <p class="card-text">Inicia la actividad a una hora prudente.
-                    Valora de forma constante que el resto del grupo está disfrutando.
-                    No te separes de tus compañeros, ni dejes a nadie solo.
-                    Si es necesario, ten en cuenta las alternativas más cortas o darte la vuelta y volver otro día.
-                    Bebe y como adecuadamente, protégete del sol.</p>
-                    <br>
-                    <a class="btn__l" href="#">Learn More</a>
-                </div>
+
+            <div class="section-actividades__gallery-item"data-aos="zoom-in">
+                <img src="../img/send6.jpg" alt="senderismo" class="section-actividades__gallery-img">
+                <h2 class="section-actividades__gallery-title"></h2>
+            </div>
+
+            <div class="section-actividades__gallery-item"data-aos="zoom-in">
+                <img src="../img/send4.jpg" alt="senderismo" class="section-actividades__gallery-img">
+                <h2 class="section-actividades__gallery-title"></h2>
+            </div>
+
+            <div class="section-actividades__gallery-item"data-aos="zoom-in">
+                <img src="../img/send3.jpg" alt="senderismo" class="section-actividades__gallery-img">
+                <h2 class="section-actividades__gallery-title"></h2>
+            </div>
+            <div class="section-actividades__gallery-item"data-aos="zoom-in">
+                <img src="../img/send2.jpg" alt="senderismo" class="section-actividades__gallery-img">
+                <h2 class="section-actividades__gallery-title"></h2>
+            </div>
+            <div class="section-actividades__gallery-item"data-aos="zoom-in">
+                <img src="../img/send1.jpg" alt="senderismo" class="section-actividades__gallery-img">
+                <h2 class="section-actividades__gallery-title"></h2>
             </div>
         </div>
     </article >
+
+
 
 </section>
 </main> 
