modifique animaciones de contacto

--- a/descubre/contactos.html
+++ b/descubre/contactos.html
@@ -76,7 +76,7 @@
 <!--seccion-contactos-->
 <section class="section-contactos">
     <div class="section-contactos__titulos">
-        <h1 class="section-contactos__h1 focus-in-contract "> Comunicate Con Nosotros </h1>
+        <h1 class="section-contactos__h1 tracking-in-expand "> Comunicate Con Nosotros </h1>
         <div class="line"></div>
     </div>
 <!-------seccion-Form------>
